objects/xtma_Individual_Email_Result__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Contact__r.AccountId</formula>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>Individual_Email_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>R00N30000001fVySEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Bounced__c</fullName>
        <label>Date Bounced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Unsubscribed__c</fullName>
        <label>Date Unsubscribed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailResultSummaryOutdated__c</fullName>
        <formula>IF( OR( ISNULL( EmailResultSummary__c ), EmailResultSummary__c = &quot;&quot;, LastModifiedDate &gt;= EmailResultSummary__r.LastModifiedDate ), &quot;True&quot;, &quot;False&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Result Summary Outdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailResultSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Result Summary</label>
        <referenceTo>EmailResultSummary__c</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>IndividualEmailResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>R00N30000001fVygEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LinkToAccount__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + AccountId__c,    Contact__r.Account.Name, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Total_Clicks__c</fullName>
        <label>Number of Total Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Unique_Clicks__c</fullName>
        <label>Number of Unique Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>